# hirank

./: .gitignore  LICENSE  README.md  pyproject.toml
doc/: api.rst  compare_runtime_scaling.ipynb  comparing_modes.ipynb  conf.py  index.rst  installation.rst  mnist_ood_detection.ipynb  performance.ipynb  requirements.txt  scaling.ipynb
hirank/: __init__.py  bootstrap_rankod.py  rankod.py
tests/: test_comprehensive.py  test_rankod.py  test_rankod_advanced.py
