[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hirank"
version = "0.1.0"
description = "High-dimensional rank-based outlier detection using reverse k-NN density estimation"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Aaron Smith"},
    {name = "John Healy", email = "jchealy@gmail.com"}
]
requires-python = ">=3.10"
keywords = [
    "outlier detection",
    "anomaly detection", 
    "rank-based",
    "high-dimensional",
    "machine learning",
    "pynndescent"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "pynndescent>=0.5.0",
    "numba>=0.56.0",
    "joblib>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
benchmarks = [
    "pyod>=1.1.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "pandas>=1.5.0",
    "tables>=3.8.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "numpydoc>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/TutteInstitute/hirank"
Documentation = "https://hirank.readthedocs.io"
Repository = "https://github.com/TutteInstitute/hirank"
Issues = "https://github.com/TutteInstitute/hirank/issues"

[tool.setuptools]
packages = ["hirank"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests that run benchmarks (deselect with '-m \"not benchmark\"')",
    "external: marks tests that require external data or services",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | \.eggs
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.coverage.run]
source = ["hirank"]
omit = [
    "*/tests/*",
    "*/benchmarks/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
